<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="airport"
            type="org.network.opensky.airports.model.Airport"/>
        <variable name="callback"
            type="org.network.opensky.airports.ui.AirportClickCallback"/>
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/mh_dp"
        app:cardUseCompatPadding="true"
        android:onClick="@{() ->  callback.onClick(airport)}"
        style="?attr/materialCardViewOutlinedStyle">

        <RelativeLayout
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/icao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_airport_icao"
                android:text="@{airport.icao}"/>

            <TextView
                android:id="@+id/iata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/cd_airport_iata"
                android:text="@{airport.iata}"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/icao"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/cd_airport_name"
                android:text="@{airport.name}"/>

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/cd_airport_city"
                android:text="@{airport.city}"/>

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/cd_airport_country"
                android:text="@{airport.country}"/>

            <TextView
                android:id="@+id/timezone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/country"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/cd_airport_timezone"
                android:text="@{airport.timezone}"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:minHeight="@dimen/airport_item_min_height"-->
<!--        android:onClick="@{() ->  callback.onClick(airport)}"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_marginStart="@dimen/item_horizontal_margin"-->
<!--        android:layout_marginEnd="@dimen/item_horizontal_margin"-->
<!--        app:cardUseCompatPadding="true">-->

<!--        <RelativeLayout-->
<!--            android:layout_marginStart="@dimen/item_horizontal_margin"-->
<!--            android:layout_marginEnd="@dimen/item_horizontal_margin"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <TextView-->
<!--                android:id="@+id/icao"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:contentDescription="@string/cd_airport_icao"-->
<!--                android:text="@{airport.icao}"/>-->

<!--            <TextView-->
<!--                android:id="@+id/iata"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:contentDescription="@string/cd_airport_iata"-->
<!--                android:text="@{airport.iata}"/>-->

<!--            <TextView-->
<!--                android:id="@+id/name"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@id/icao"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:contentDescription="@string/cd_airport_name"-->
<!--                android:text="@{airport.name}"/>-->

<!--            <TextView-->
<!--                android:id="@+id/city"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@id/name"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:contentDescription="@string/cd_airport_city"-->
<!--                android:text="@{airport.city}"/>-->

<!--            <TextView-->
<!--                android:id="@+id/country"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@id/city"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:contentDescription="@string/cd_airport_country"-->
<!--                android:text="@{airport.country}"/>-->

<!--            <TextView-->
<!--                android:id="@+id/timezone"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@id/country"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:contentDescription="@string/cd_airport_timezone"-->
<!--                android:text="@{airport.timezone}"/>-->

<!--        </RelativeLayout>-->

<!--    </androidx.cardview.widget.CardView>-->
</layout>